<resources>
    <string name="app_name">IMC 2.0</string>
    <string name="calculate">Calculate</string>
    <string name="bmi">BMI</string>
    <string name="login">Login</string>
    <string name="your_email">Your e-mail</string>
    <string name="your_pass">Your password</string>
    <string name="new_user">Sign up</string>
    <string name="logo_name">SENAI</string>
    <string name="add_new_user">Add new user</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="create_user">Create user</string>
    <string name="question_text">Shall we calculate your Body Mass Index now?</string>
    <string name="result_text">This is your BMI result</string>
    <string name="under_weight">Under weight</string>
    <string name="ideal_weight">Ideal weight</string>

</resources>